[package]
name = "dns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dns"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
color-eyre = "0.6.2"
tokio = {version = "1.30.0",  features = ["net", "macros", "fs", "io-util", "rt", "rt-multi-thread"] }
